# battle-sim

backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/core/: battle.rs  character.rs  mod.rs  status.rs  turn_queue.rs
backend/src/core/spells/: aura.rs  critical_hit.rs  hard_hit.rs  ice_bullet.rs  mod.rs  nature_voice.rs  rage.rs  reincarnation.rs  shield.rs
backend/src/models/: battle_dto.rs  mod.rs
backend/src/repository/: battle_repo.rs  mod.rs
backend/src/routes/: battles.rs  health.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/components/: CharacterCard.svelte  DataTable.svelte
frontend/src/lib/: types.js
frontend/src/lib/api/: battles.js
frontend/src/pages/: BattlePage.svelte  HistoryPage.svelte
