[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9" }
tokio = { version = "1.52.3", features = ["full"] }
rand = "0.8"
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
